all routes and authentication work on localhost
